<resources>
    <string name="app_name">Offerta Admin</string>
    <string name="print">طباعة</string>
    <string name="status">الحالة</string>
    <string name="username">اسم المستخدم</string>
    <string name="date">التاريخ</string>

    <!--dialog filter results-->
    <string name="close">Close</string>
    <string name="orderState">Order State:</string>
    <string name="chooseState">Choose a state</string>
    <string name="filterResults">Filter Results</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="filter">Filter</string>
    <string name="checkConnection">check internet connection!</string>

</resources>
