<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_filter" />

                <TextView
                    android:id="@+id/tvToolbarTitle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="إدارة الطلبات"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <ImageView
                    android:id="@+id/imgSignOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_sign_out" />


            </LinearLayout>




            <EditText
                android:id="@+id/txtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/search_bg"
                android:drawableStart="@drawable/search"
                android:drawablePadding="12dp"
                android:inputType="number"
                android:gravity="center_vertical"
                android:hint="ابحث عن طلب"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:textColorHint="#949494"
                android:textSize="13sp" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <TextView
            style="@style/TextStyleTable"
            android:layout_weight="0.8"
            android:text="#" />

        <View style="@style/LineHorStyle" />

        <TextView
            style="@style/TextStyleTable"
            android:layout_weight="1.2"
            android:text="@string/date" />

        <View style="@style/LineHorStyle" />

        <TextView
            style="@style/TextStyleTable"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/username" />

        <View style="@style/LineHorStyle" />

        <TextView
            style="@style/TextStyleTable"
            android:text="@string/status" />

        <View style="@style/LineHorStyle" />

        <TextView
            style="@style/TextStyleTable"
            android:drawableStart="@drawable/ic_print_white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/print" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHeader"
        android:layout_weight="1" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutHeader"
        android:layout_centerHorizontal="true" />
</RelativeLayout>